Fix #1988654 [Text in the Cover grid preferences does not fit when the window is small.](https://bugs.launchpad.net/calibre/+bug/1988654)

--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1083</width>
+    <width>1096</width>
     <height>791</height>
    </rect>
   </property>
@@ -397,6 +397,12 @@
           <layout class="QGridLayout" name="gridLayout_4">
            <item row="0" column="0" colspan="5">
             <widget class="QLabel" name="cover_size_label">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="text">
               <string>By default, calibre chooses a cover size based on your computer's screen size. You can change the cover size here:</string>
              </property>
@@ -1149,15 +1155,15 @@ using the Tab key. The F2 (Edit) key will still open the template editor.&lt;/p&
        </attribute>
        <layout class="QGridLayout" name="verticalLayout_42">
         <item row="0" column="0">
-         <widget class="QLabel">
+         <widget class="QLabel" name="label">
+          <property name="toolTip">
+           <string>User categories and Saved searches cannot be moved</string>
+          </property>
           <property name="text">
            <string>Select the categories to display in the Tag browser, and their &amp;order</string>
           </property>
           <property name="buddy">
            <cstring>tb_display_order</cstring>
-          </property>
-          <property name="toolTip">
-           <string>User categories and Saved searches cannot be moved</string>
           </property>
          </widget>
         </item>
@@ -1481,13 +1487,7 @@ up into subcategories. If the partition method is set to disable, this value is 
            </layout>
           </item>
           <item row="1" column="0">
-           <widget class="QLabel">
-            <property name="text">
-             <string>Select categories to &amp;partition:</string>
-            </property>
-            <property name="buddy">
-             <cstring>tb_cats_to_partition</cstring>
-            </property>
+           <widget class="QLabel" name="label">
             <property name="toolTip">
              <string>&lt;p&gt;Check the box for categories that are to
 be partitioned using the criteria above. Uncheck the box if you don't want to
@@ -1495,6 +1495,12 @@ partition a category even if the number of items is larger than
 the value shown above. This option can be used to
 avoid collapsing hierarchical categories that have only
 a few top-level elements.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>Select categories to &amp;partition:</string>
+            </property>
+            <property name="buddy">
+             <cstring>tb_cats_to_partition</cstring>
             </property>
            </widget>
           </item>
@@ -1572,13 +1578,7 @@ structure and you want to use the same for each one.&lt;/p&gt;</string>
        </attribute>
        <layout class="QGridLayout">
         <item row="0" column="0">
-         <widget class="QLabel">
-          <property name="text">
-           <string>Select categories with &amp;hierarchical items:</string>
-          </property>
-          <property name="buddy">
-           <cstring>tb_hierarchical_cats</cstring>
-          </property>
+         <widget class="QLabel" name="label">
           <property name="toolTip">
            <string>&lt;p&gt;Check the box for an item if it is to be displayed as a
 hierarchical tree in the Tag browser. For example, if you check
@@ -1588,6 +1588,12 @@ both under 'Mystery'. If 'tags' is not checked
 then the tags will be displayed each on their own line.&lt;/p&gt;
 &lt;p&gt;The categories 'authors', 'publisher', 'news', 'formats', and 'rating'
 cannot be hierarchical.&lt;/p&gt;</string>
+          </property>
+          <property name="text">
+           <string>Select categories with &amp;hierarchical items:</string>
+          </property>
+          <property name="buddy">
+           <cstring>tb_hierarchical_cats</cstring>
           </property>
          </widget>
         </item>
@@ -1675,15 +1681,15 @@ structure and you want to use the same for each one.&lt;/p&gt;</string>
          </spacer>
         </item>
         <item row="11" column="0">
-         <widget class="QLabel">
-          <property name="text">
-           <string>Set the &amp;order of searches when clicking on items</string>
-          </property>
+         <widget class="QLabel" name="label">
           <property name="toolTip">
            <string>&lt;p&gt;Set the order of the searches when clicking on an item in
 the Tag browser. The 'or its children' options are ignored when clicking on
 top-level categories, items that aren't in a hierarchical category, and items
 that don't have children.&lt;/p&gt;</string>
+          </property>
+          <property name="text">
+           <string>Set the &amp;order of searches when clicking on items</string>
           </property>
           <property name="buddy">
            <cstring>tb_search_order</cstring>
@@ -2043,7 +2049,7 @@ column being examined (the left-hand panel)&lt;/p&gt;</string>
    </item>
   </layout>
  </widget>
- <customwidgets>ListWidgetWithMoveByKeyPress
+ <customwidgets>
   <customwidget>
    <class>ListViewWithMoveByKeyPress</class>
    <extends>QListView</extends>
@@ -2053,11 +2059,6 @@ column being examined (the left-hand panel)&lt;/p&gt;</string>
    <class>ListWidgetWithMoveByKeyPress</class>
    <extends>QListWidget</extends>
    <header>calibre/gui2/preferences.h</header>
-  </customwidget>
-  <customwidget>
-   <class>EditWithComplete</class>
-   <extends>QComboBox</extends>
-   <header>calibre/gui2/complete2.h</header>
   </customwidget>
   <customwidget>
    <class>ScrollingTabWidget</class>
