Make tools on the search bar customizable.
Given that the saved searches action and the saved search button on the search bar now do the same thing, it seems reasonable to allow the user to choose whether the saved search button shows. I went from there to "Why not allow adding other buttons to the bar?" There is a lot of available real estate on that bar. This commit does that using a new toolbar in preferences / toolbars.

I didn't use a QToolBar, instead constructing a 'classic' toolbar in an QHBoxLayout. That gave me more control over the look and placement. And also, I had no end of trouble trying to work through how to use a QToolBar that isn't attached to a QMainWIndow.

In the process I removed the legacy Saved Search combo box, its associated buttons, and the tweak. I am sure there are some people still using the years-old interface and that they will complain. I can accept that, given that the button is better in almost every way.

--- a/src/calibre/gui2/preferences/search.ui
+++ b/src/calibre/gui2/preferences/search.ui
@@ -24,7 +24,7 @@
        <string>Genera&amp;l</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_6">
-       <item row="6" column="0">
+       <item row="11" column="0">
         <widget class="QPushButton" name="clear_history_button">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
@@ -40,7 +40,7 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="0" colspan="2">
+       <item row="10" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox">
          <property name="title">
           <string>What to search by default</string>
@@ -120,7 +120,7 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="20" column="0">
         <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -137,6 +137,13 @@
         <widget class="QCheckBox" name="opt_use_primary_find_in_search">
          <property name="text">
           <string>Unaccented characters match &amp;accented characters and punctuation is ignored</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QCheckBox" name="opt_search_tool_bar_shows_text">
+         <property name="text">
+          <string>Show text next to buttons in the search bar</string>
          </property>
         </widget>
        </item>
