--- a/src/calibre/gui2/dialogs/template_dialog.ui
+++ b/src/calibre/gui2/dialogs/template_dialog.ui
@@ -345,9 +345,9 @@ you the value as well as all the local variables&lt;/p&gt;</string>
            <property name="toolTip">
             <string>&lt;p&gt;The text of the template program goes in this box.
             A General Program Mode template must begin with the word "program:".
-            A python template must begin with the word "python:" followed by a
+            A Python template must begin with the word "python:" followed by a
             function definition line. There is a context menu item you can use
-            to enter the first lines of a python template.&lt;/p&gt;</string>
+            to enter the first lines of a Python template.&lt;/p&gt;</string>
            </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
