--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1846,7 +1846,7 @@ that don't have children.&lt;/p&gt;</string>
        <item row="7" column="1">
         <widget class="QLineEdit" name="opt_cover_browser_title_template">
          <property name="toolTip">
-          <string>&lt;p&gt;The template used to generate the text below the covers. Uses
+          <string>&lt;p&gt;The template used to generate the text below the covers. This template uses
 the same syntax as save templates. Defaults to just the book title.
 Note that this setting is per-library, which means that you have to
 set it again for every different calibre library you use. Use an
