Metadata download: Allow specifying rules to transform publisher names in addition to author and tag names. Fixes #2012304 [[Enhancement] in "Metadata Download," add "rules to  filter/transform publisher"](https://bugs.launchpad.net/calibre/+bug/2012304)

--- a/src/calibre/gui2/preferences/metadata_sources.ui
+++ b/src/calibre/gui2/preferences/metadata_sources.ui
@@ -234,7 +234,7 @@
                 </sizepolicy>
                </property>
                <property name="text">
-                <string>Create &amp;rules to transform tags/authors</string>
+                <string>Create &amp;rules to transform tags/authors/publishers</string>
                </property>
                <property name="popupMode">
                 <enum>QToolButton::InstantPopup</enum>
