--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -817,10 +817,12 @@ A value of zero means calculate automatically.</string>
             </property>
            </widget>
           </item>
-          <item row="4" column="0">
+          <item row="4" column="0" colspan="2">
            <widget class="QLabel" name="label_3">
             <property name="text">
-             <string>Note that &lt;b&gt;comments&lt;/b&gt; will always be displayed at the end, regardless of the position you assign here.</string>
+             <string>&lt;p&gt;Note: &lt;b&gt;comments&lt;/b&gt;-like columns will always
+                     be displayed at the end unless their "Heading position" is
+                     "Show heading to the side".&lt;/p&gt;</string>
             </property>
             <property name="wordWrap">
              <bool>true</bool>
