Two changes related to the icons in tag browser: 1) Add the capability to show the icons next to the text, unaligned. Set via an option in look&feel. This change required recording the icon position on a per-item basis instead of a per-category basis. 2) Add the possibility of keyboard shortcuts to "show counts" and "show average rating" so they are the same as the show icons ones.

--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1370,6 +1370,21 @@ box will cause these empty categories to be hidden.&lt;/p&gt;</string>
             </property>
            </widget>
           </item>
+          <item row="2" column="1">
+           <widget class="QCheckBox" name="opt_icons_on_right_in_tag_browser">
+            <property name="text">
+             <string>Place icons on the &amp;right, in columns</string>
+            </property>
+            <property name="toolTip">
+             <string>If checked the notes and links icons will be placed at the right, after
+the count and in columns. If unchecked, the icons will be placed immediately after the text,
+to the left of the count and not in columns.</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
           <item row="2" column="2">
            <widget class="QCheckBox" name="opt_tag_browser_always_autocollapse">
             <property name="toolTip">
