--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -143,7 +143,7 @@
        <item row="3" column="0">
         <widget class="QLabel" name="label_17">
          <property name="text">
-          <string>&amp;User interface layout (needs restart):</string>
+          <string>&amp;User interface layout:</string>
          </property>
          <property name="buddy">
           <cstring>opt_gui_layout</cstring>
