--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1846,7 +1846,7 @@ that don't have children.&lt;/p&gt;</string>
        <string>Cover &amp;browser</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_11">
-       <item row="1" column="0">
+       <item row="0" column="1" colspan="2">
         <widget class="QCheckBox" name="opt_cb_fullscreen">
          <property name="text">
           <string>When showing in a separate window, show it &amp;fullscreen</string>
@@ -1860,11 +1860,11 @@ that don't have children.&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="1" colspan="2">
+       <item row="7" column="1" colspan="2">
         <widget class="QSpinBox" name="opt_cover_flow_queue_length"/>
        </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="label_6">
+       <item row="7" column="0">
+        <widget class="QLabel" name="label_61">
          <property name="text">
           <string>&amp;Number of covers to show in browse mode (needs restart):</string>
          </property>
@@ -1873,7 +1873,7 @@ that don't have children.&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="2">
+       <item row="8" column="2">
         <widget class="QPushButton" name="cover_browser_title_template_button">
          <property name="text">
           <string>Template &amp;editor</string>
@@ -1893,7 +1893,7 @@ that don't have children.&lt;/p&gt;</string>
          </property>
         </spacer>
        </item>
-       <item row="7" column="1">
+       <item row="8" column="1">
         <widget class="QLineEdit" name="opt_cover_browser_title_template">
          <property name="toolTip">
           <string>&lt;p&gt;The template used to generate the text below the covers. This template uses
@@ -1904,14 +1904,14 @@ empty template for no text.&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="0" colspan="3">
+       <item row="4" column="0">
         <widget class="QCheckBox" name="opt_cover_browser_reflections">
          <property name="text">
           <string>Show &amp;reflections</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="0" colspan="3">
+       <item row="4" column="1" colspan="2">
         <widget class="QCheckBox" name="opt_cb_preserve_aspect_ratio">
          <property name="toolTip">
           <string>Show covers in their original aspect ratio instead of resizing
@@ -1922,10 +1922,31 @@ them to all have the same width and height</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="1" colspan="2">
+       <item row="6" column="0">
+        <widget class="QLabel" name="label_987">
+         <property name="text">
+          <string>Cover browser &amp;position in the narrow layout:</string>
+         </property>
+         <property name="toolTip">
+          <string>&lt;p&gt;This option controls the position of the cover browser when
+using the Narrow user interface layout. "Automatic" will place the cover browser
+on top or on the right of the book list depending on the aspect ratio of the
+calibre window. "On top" places it over the book list, and "On right" places it
+to the right of the book list. This option cannot be changed when using the
+Wide user interface layout.&lt;/p&gt;</string>
+         </property>
+         <property name="buddy">
+          <cstring>opt_cover_browser_narrow_view_position</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1" colspan="2">
+        <widget class="QComboBox" name="opt_cover_browser_narrow_view_position"/>
+       </item>
+       <item row="9" column="1" colspan="2">
         <widget class="QComboBox" name="opt_cover_browser_subtitle_field"/>
        </item>
-       <item row="7" column="0">
+       <item row="8" column="0">
         <widget class="QLabel" name="label_23">
          <property name="text">
           <string>&amp;Template for caption:</string>
@@ -1935,7 +1956,7 @@ them to all have the same width and height</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="0">
+       <item row="9" column="0">
         <widget class="QLabel" name="label_24">
          <property name="text">
           <string>Fie&amp;ld for sub-title:</string>
@@ -1945,7 +1966,7 @@ them to all have the same width and height</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item row="1" column="1" colspan="2">
         <widget class="QLabel" name="fs_help_msg">
          <property name="styleSheet">
           <string notr="true">margin-left: 1.5em</string>
@@ -1958,7 +1979,7 @@ them to all have the same width and height</string>
          </property>
         </widget>
        </item>
-       <item row="9" column="0">
+       <item row="10" column="0">
         <widget class="QLabel" name="label_26">
          <property name="text">
           <string>Show ne&amp;xt cover during auto scroll after:</string>
@@ -1968,7 +1989,7 @@ them to all have the same width and height</string>
          </property>
         </widget>
        </item>
-       <item row="9" column="1">
+       <item row="10" column="1">
         <widget class="QDoubleSpinBox" name="opt_books_autoscroll_time">
          <property name="suffix">
           <string> seconds</string>
@@ -1984,7 +2005,7 @@ them to all have the same width and height</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="0" colspan="2">
+       <item row="5" column="0" colspan="2">
         <widget class="QCheckBox" name="opt_cb_double_click_to_activate">
          <property name="text">
           <string>&amp;Double click to view the central book, instead of single click</string>
